--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
-remote_theme: pages-themes/minimal@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+title: William Blacksmith Sr.
+description: Sicangu Climate Center IT Specialist
+logo:  <img width="125" height="125" src="
+
+remote_theme: sharu725/online-cv
