--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
 title: William Blacksmith Sr.
 description: Sicangu Climate Center IT Specialist
-logo:  <img width="125" height="125" src="
-
+logo:  <img width="125" height="125" src="/assets/img/RST Flag.png"
 remote_theme: sharu725/online-cv
