--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: William Blacksmith Sr.
 description: Sicangu Climate Center IT Specialist
 logo:  <img width="125" height="125" src="/assets/img/RST Flag.png"
-remote_theme: sharu725/online-cv
+remote_theme: pages-themes/modernist@v0.2.0
+- jekyll-remote-theme # add this line to the plugins list if you already have one
