--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,7 @@
 title: William Blacksmith Sr.
+logo: /assets/img/RST Flag.png
 description: Sicangu Climate Center IT Specialist
-logo:  <img width="125" height="125" src="/assets/img/RST Flag.png"
-remote_theme: pages-themes/modernist@v0.2.0
+show_downloads: true
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
