--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,6 @@ title: William Blacksmith Sr.
 logo: /assets/img/WilliamBlacksmith.jpg
 description: Sicangu Climate Center IT Specialist
 show_downloads: true
-remote_theme: pages-themes/minimal@v0.2.0
+remote_theme: pages-themes/slate@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
