--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: William Blacksmith Sr.
 logo: /assets/img/WilliamBlacksmith.jpg
 description: Sicangu Climate Center IT Specialist
 show_downloads: true
-remote_theme: pages-themes/dinky@v0.2.0
+remote_theme: pages-themes/minimal@v0.2.0
