--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: William Blacksmith Sr.
 logo: /assets/img/WilliamBlacksmith.jpg
-description: Sicangu Climate Center IT Specialist
+description: ## Sicangu Climate Center IT Specialist
 show_downloads: true
 remote_theme: pages-themes/minimal@v0.2.0
