--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,5 @@ title: William Blacksmith Sr.
 logo: /assets/img/WilliamBlacksmith.jpg
 description: Sicangu Climate Center IT Specialist
 remote_theme: pages-themes/architect@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
