--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: William Blacksmith Sr.
 logo: /assets/img/WilliamBlacksmith.jpg
 description: Sicangu Climate Center IT Specialist
-remote_theme: pages-themes/minimal@v0.2.0
+remote_theme: sharu725/online-cv
