--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-logo: /assets/img/WilliamBlacksmith.jpg
+logo: /assets/img/William Blacksmith_100x100.jpg
 title: William Blacksmith Sr.
 description: Sicangu Climate Center IT Specialist
 remote_theme: sharu725/online-cv
