--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: William Blacksmith Sr.
 description: Sicangu Climate Center IT Specialist
-logo: /assets/profile.jpg
+logo: /assets/images/william.jpg
 remote_theme: sharu725/online-cv
