--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: William Blacksmith Sr.
 description: Sicangu Climate Center IT Specialist
 logo: /assets/images/william.jpg
-remote_theme: sharu725/online-cv
+remote_theme: minimal@v0.2.0
