--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: 
 description: IT Specialist
-logo: /assets/images/william.jpg, 
+logo: /assets/images/william.jpg
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
